project/styles/pokemon-type-matchup-tool.css
:root {
    --tog-blue: #4464a4;
    --tog-cream: #F2ECE6;
    --tog-red: #BF3D3D;
    --tog-dark-red: #862b2b;
    --tog-black: #0F1A2A;
    --white: #ffffff;
}

* {
    background-color: var(--white);
    /* font-family: Lato, sans-serif; */
}

@font-face {
    font-family: 'Pokemon B/W';
    src: url("../fonts/pokemon-b-w.otf.woff2/pokemon-b-w.otf.woff2") format("woff2"),
        url("../fonts/pokemon-b-w.ttf/pokemon-b-w.ttf") format("truetype");
}

body {
    max-width: 100%;
}

header {
    background-color: var(--tog-blue);
    display: flex;
    justify-content: space-between;
}

h1 {
    font-size: clamp(6px, 5vw, 32px);
    color: var(--tog-cream);
    display: block;
    max-width: 100%;
    background-color: var(--tog-blue);
    padding: 1.5rem;
    white-space: nowrap;
    margin-right: auto;
}

nav {
    max-width: 100%;
}

#menu {
    background-color: var(--tog-blue);
    color: var(--tog-cream);
    font-size: 2rem;
    border: none;
}

#menu::before {
    content: "☰";
}

#menu.open::before {
    content: "X";
}

.navigation {
    display: none;
    width: 70%;
    max-width: 350px;
    list-style: none;
    text-align: right;
    float: right;
}

.navigation li {
    padding: 0.45rem 0;
    text-decoration: none;
    font-size: 20px;
    width: 100%;
    color: var(--tog-cream);
    background-color: var(--tog-red);
    white-space: pre;
}

.navigation li:hover {
    background-color: var(--tog-dark-red);
    font-weight: bold;
}

.normal-div {
    margin: 1.75rem 1.25rem;
    width: 90%;
}

#eighteen-types-container {
    margin: 4.5rem 0.25rem 1.75rem 0.25rem;
    display: grid;
    grid-template-rows: 1fr 3fr;
    grid-template-columns: 2fr 1fr;
    position: relative;
    width: 100%;
    max-width: 100%;
}

#eighteen-types-heading {
    position: absolute;
    top: -2rem;
}

#eighteen-types-paragraph
{
    grid-row: 1 / 2;
    grid-column: 1 / 2;
}

#type-grid
{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
    align-items: start;
    gap: 0.01rem;
}

#type-grid>img {
    width: 100%;
    height: auto;
    max-width: 80px;
    object-fit: scale-down;
    display: block;
    margin: 0;
    padding: 0;
}

#pokemon-example
{
    grid-row: 1 / 3;
    grid-column: 2 / 3;
}

p, a {
    font-family: "Pokemon B/W";
    font-size: 1.5rem;
    margin: 1.25rem 0 1.25rem 0;
}

.open {
    display: block;
}

/* Non-mobile CSS (for larger screens) below:  */
@media screen and (min-width: 640px) {

}

